se modificaron estilos en la seccion-1

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=K2D">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav class="nav-menu">
             <div class="brand">
                 <img class="img-pomodoro-brand" src="assets/pomodoro.png" alt="pomodoro tomatoes">
@@ -29,14 +29,15 @@
             </div>
         </nav>
     </header>
-   
-    <section class="header">
-        <h2 class="title-header">Pomodoro</h2>
-        <h3 class="title-technique-section">La legendaria técnica</h2>
-            <h3 class="title-technique-section">de control del tiempo</h2>
-        <img class="img-header" src="assets/pomodoro.png" alt="pomodoro tomatoes">
-    </section>
     <main>
+        <section class="section-1">
+            <img class="img-pomodoro" src="assets/pomodoro.png" alt="pomodoro tomatoes">
+            <div class="title">
+                <h2 class="title-pomodoro">Pomodoro</h2>
+                <h3 class="subtitle-technique">La legendaria técnica de control del tiempo</h2>    
+            </div>
+  
+        </section>
         <section class="best-technique-section">
             <h2 class="title-best-technique">La mejor técnica</h2>
             <h2 class="subtitle-best-technique">Científicamente, la técnica
